Header Menue Change

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1 class="logo">Plumbing Wiki</h1>
       <nav>
         <ul class="menu">
-          <li><a href="#information">Information</a></li>
+          <li><a href="#information">Blog</a></li>
           <li><a href="#feature-business">Feature Your Business</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#contact">About Us</a></li>
         </ul>
       </nav>
     </div>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
