Alligning h3 with CSS

--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
       <h1 class="logo">Plumbing Wiki</h1>
       <nav>
         <ul class="menu">
-          <li><a href="#information">Blog</a></li>
+          <li><a href="#information">Information</a></li>
           <li><a href="#feature-business">Feature Your Business</a></li>
-          <li><a href="#contact">About Us</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
     </div>
@@ -26,7 +26,7 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content container">
-      <h2>Tricks, Tips & Information from The US Plumbing Industry</h2>
+      <h2>Tricks, Tips & Information from <br> The US Plumbing Industry</h2>
       <p><strong>Expert Insights in Plumbing & Maintenance.</strong> Access actionable tips, in-depth guides, and technical information directly from seasoned industry professionals. We cover everything from essential maintenance to complex repairs, delivered with clarity and a touch of industry perspective.</p>
       <a href="#feature-business" class="btn">Publish With Us</a>
     </div>
