--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <!-- Header -->
   <header>
     <div class="header-flex container">
-      <h1 class="logo">Plumbing Wiki</h1>
+      <a href="/" class="logo">
+  <img src="logo.png" alt="Plumbing Wiki Logo">
+  <span>Plumbing Wiki</span>
+</a>
       <nav>
         <ul class="menu">
           <li><a href="#information">Information</a></li>
@@ -76,4 +79,5 @@
 
 </body>
 </html>
+
 
