--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </a>
       <nav>
         <ul class="menu">
-          <li><a href="#information">Information</a></li>
-          <li><a href="#feature-business">Feature Your Business</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#information">About</a></li>
+          <li><a href="#feature-business">Blogs</a></li>
+          <li><a href="#contact">Feature Your Plumbing Business</a></li>
         </ul>
       </nav>
     </div>
@@ -79,5 +79,6 @@
 
 </body>
 </html>
+
 
 
