--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <nav>
         <ul class="menu">
           <li><a href="#information">About</a></li>
-          <li><a href="#feature-business">Blogs</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
           <li><a href="#contact">Feature Your Plumbing Business</a></li>
         </ul>
       </nav>
@@ -79,6 +79,7 @@
 
 </body>
 </html>
+
 
 
 
