--- a/blog.html
+++ b/blog.html
@@ -4,134 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Blog - Plumbing Wiki</title>
-  <meta name="description" content="Browse our expert plumbing blogs covering drain cleaning, maintenance tips, and more.">
-  <link rel="stylesheet" href="style.css">
-  <style>
-    /* === Blog Grid Page === */
-    body {
-      background-color: #0e0e0e;
-      color: #eee;
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-    }
-
-    header {
-      background: linear-gradient(135deg, #00d2ff, #3a7bd5);
-      color: white;
-      padding: 25px 0;
-      text-align: center;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
-    }
-
-    header h1 {
-      font-size: 2rem;
-      font-weight: 700;
-      margin: 0;
-    }
-
-    .blog-container {
-      width: 90%;
-      max-width: 1300px;
-      margin: 80px auto;
-    }
-
-    .blog-container h2 {
-      text-align: center;
-      color: #1abc9c;
-      font-size: 2.5rem;
-      margin-bottom: 50px;
-    }
-
-    .blog-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
-      gap: 30px;
-    }
-
-    .blog-box {
-      background-color: #1b1b1b;
-      border-radius: 12px;
-      overflow: hidden;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.4);
-      transition: transform 0.3s ease, box-shadow 0.3s ease;
-    }
-
-    .blog-box:hover {
-      transform: translateY(-5px);
-      box-shadow: 0 10px 25px rgba(0,0,0,0.6);
-    }
-
-    .blog-box img {
-      width: 100%;
-      height: 180px;
-      object-fit: cover;
-      display: block;
-    }
-
-    .blog-content {
-      padding: 20px;
-      text-align: center;
-    }
-
-    .blog-content h3 {
-      color: #fff;
-      margin-bottom: 10px;
-      font-size: 1.3rem;
-    }
-
-    .blog-content p {
-      color: #ccc;
-      font-size: 0.95rem;
-      margin-bottom: 20px;
-      line-height: 1.5;
-    }
-
-    .btn-read {
-      display: inline-block;
-      background-color: #1abc9c;
-      color: #fff;
-      padding: 10px 22px;
-      border-radius: 50px;
-      font-weight: 600;
-      text-transform: uppercase;
-      letter-spacing: 1px;
-      transition: all 0.3s ease;
-    }
-
-    .btn-read:hover {
-      background-color: #16a085;
-      transform: translateY(-2px);
-    }
-
-    footer {
-      background-color: #111;
-      color: #aaa;
-      text-align: center;
-      padding: 30px 0;
-      margin-top: 80px;
-      font-size: 0.9rem;
-    }
-
-    @media (max-width: 768px) {
-      .blog-container h2 {
-        font-size: 2rem;
-      }
-    }
-  </style>
+  <meta name="description" content="Explore plumbing insights, maintenance tips, and expert drain cleaning advice from Plumbing Wiki.">
+  <link rel="stylesheet" href="ourblogs.css">
 </head>
 <body>
 
+  <!-- Header (same as homepage) -->
   <header>
-    <h1>Our Blog</h1>
+    <div class="header-flex container">
+      <a href="/" class="logo">
+        <img src="logo.png" alt="Plumbing Wiki Logo">
+        <span>Plumbing Wiki</span>
+      </a>
+      <nav>
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="blog.html" class="active">Blogs</a></li>
+          <li><a href="#contact">Feature Your Plumbing Business</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
+  <!-- Blog Section -->
   <section class="blog-container">
     <h2>Explore Expert Plumbing Articles</h2>
 
     <div class="blog-grid">
 
-      <!-- Example blog box — duplicate this 16 times -->
+      <!-- Example Blog 1 -->
       <article class="blog-box">
         <img src="images/drain-cleaning.jpg" alt="Drain Cleaning Tips">
         <div class="blog-content">
@@ -141,6 +42,7 @@
         </div>
       </article>
 
+      <!-- Example Blog 2 -->
       <article class="blog-box">
         <img src="images/water-heater.jpg" alt="Water Heater Maintenance">
         <div class="blog-content">
@@ -150,14 +52,36 @@
         </div>
       </article>
 
-      <!-- Add up to 16 total boxes -->
-      <!-- Just duplicate <article class="blog-box">...</article> -->
+      <!-- Example Blog 3 -->
+      <article class="blog-box">
+        <img src="images/pipe-repair.jpg" alt="Pipe Repair Tips">
+        <div class="blog-content">
+          <h3>5 Signs Your Pipes Need Immediate Attention</h3>
+          <p>Discover the warning signs that could save you from costly water damage and plumbing emergencies.</p>
+          <a href="blog3.html" class="btn-read">Read More</a>
+        </div>
+      </article>
 
+      <!-- Example Blog 4 -->
+      <article class="blog-box">
+        <img src="images/faucet-installation.jpg" alt="Faucet Installation">
+        <div class="blog-content">
+          <h3>Installing a New Faucet: Step-by-Step Guide</h3>
+          <p>A quick guide to replacing your old faucet like a pro, without calling a plumber.</p>
+          <a href="blog4.html" class="btn-read">Read More</a>
+        </div>
+      </article>
+
+      <!-- You can duplicate the above blocks up to 16 total -->
+      
     </div>
   </section>
 
+  <!-- Footer (same as homepage) -->
   <footer>
-    <p>&copy; 2025 Plumbing Wiki. All Rights Reserved.</p>
+    <div class="container">
+      <p>&copy; 2025 Plumbing Wiki. All Rights Reserved.</p>
+    </div>
   </footer>
 
 </body>
