--- a/blog.html
+++ b/blog.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Our Blog - Plumbing Wiki</title>
   <meta name="description" content="Explore plumbing insights, maintenance tips, and expert drain cleaning advice from Plumbing Wiki.">
-  <link rel="stylesheet" href="ourblogs.css">
+  <link rel="stylesheet" href="blogs.css">
 </head>
 <body>
 
@@ -86,3 +86,4 @@
 
 </body>
 </html>
+
