--- a/blog.html
+++ b/blog.html
@@ -18,7 +18,7 @@
       </a>
       <nav>
         <ul class="menu">
-          <li><a href="/">Home</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/">Home</a></li>
           <li><a href="blog.html" class="active">Blogs</a></li>
           <li><a href="#contact">Feature Your Plumbing Business</a></li>
         </ul>
@@ -86,4 +86,5 @@
 
 </body>
 </html>
+
 
