Made it a home improvement blog

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Plumbing Wiki, plumbing drain cleaning "guest post", "Plumbing" + "Guest Post"</title>
-  <meta name="description" content="Secure your plumbing guest post opportunity! Publish expert articles on topics like plumbing drain cleaning and gain do-follow backlinks today.">
+  <title>Renovation Wiki | Home Improvement Write For Us"</title>
+  <meta name="description" content="Secure your home improvement guest post opportunity! Renovation and Home Improvement Blog. Accepting Guest Posts">
   <link rel="stylesheet" href="sstyle.css"> <!-- directly your CSS file -->
 </head>
 <body>
@@ -13,14 +13,14 @@
   <header>
     <div class="header-flex container">
       <a href="/" class="logo">
-  <img src="logo.png" alt="Plumbing Wiki Logo">
-  <span>Plumbing Wiki</span>
+  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
+  <span>Renovation Wiki</span>
 </a>
       <nav>
         <ul class="menu">
           <li><a href="#information">About</a></li>
           <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
-          <li><a href="#contact">Feature Your Plumbing Business</a></li>
+          <li><a href="#contact">Feature Your Business</a></li>
         </ul>
       </nav>
     </div>
@@ -29,8 +29,8 @@
   <!-- Hero Section -->
   <section class="hero">
     <div class="hero-content container">
-      <h2>Tricks, Tips & Information from <br> The US Plumbing Industry</h2>
-      <p><strong>Expert Insights in Plumbing & Maintenance.</strong> Access actionable tips, in-depth guides, and technical information directly from seasoned industry professionals. We cover everything from essential maintenance to complex repairs, delivered with clarity and a touch of industry perspective.</p>
+      <h2>Tricks, Tips & Information from <br> The US Home Improvement and Renovation Industry</h2>
+      <p><strong>Expert Insights in Improvement & Maintenance.</strong> Access actionable tips, in-depth guides, and technical information directly from seasoned industry professionals. We cover everything from essential maintenance to complex repairs, delivered with clarity and a touch of industry perspective.</p>
       <a href="#feature-business" class="btn">Publish With Us</a>
     </div>
   </section>
@@ -38,7 +38,7 @@
   <!-- Feature Section -->
   <section id="feature-business" class="feature-business container">
     <h2>Publish With Us - Enhance Your Online Authority</h2>
-    <p>We feature your content across our 10+ high Domain Authority/Rating (DA/DR) plumbing blogs. Collaborate with our experienced writers and industry experts to produce insightful articles featuring your business or expertise. Secure valuable, do-follow backlinks pointing directly to your website from these published platforms.</p>
+    <p>We feature your content across our 10+ high Domain Authority/Rating (DA/DR) home improvement niche blogs. Collaborate with our experienced writers and industry experts to produce insightful articles featuring your business or expertise. Secure valuable, do-follow backlinks pointing directly to your website from these published platforms.</p>
     
     <h3>Why Publish With Us?</h3>
     <ul>
@@ -56,12 +56,13 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; 2025 Plumbing Wiki. All Rights Reserved.</p>
+      <p>&copy; 2025 Renovation Wiki. All Rights Reserved.</p>
     </div>
   </footer>
 
 </body>
 </html>
+
 
 
 
