--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Renovation Wiki | Home Improvement Write For Us"</title>
   <meta name="description" content="Secure your home improvement guest post opportunity! Renovation and Home Improvement Blog. Accepting Guest Posts">
   <link rel="stylesheet" href="sstyle.css"> <!-- directly your CSS file -->
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
