--- a/blogpost.html
+++ b/blogpost.html
@@ -11,13 +11,16 @@
 
   <!-- Header -->
   <header>
-    <div class="container header-flex">
-      <h1 class="logo">Plumbing Wiki</h1>
+    <div class="header-flex container">
+      <a href="/" class="logo">
+  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
+  <span>Renovation Wiki</span>
+</a>
       <nav>
         <ul class="menu">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="blog.html">Blog</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="#information">About</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
+          <li><a href="#contact">Feature Your Business</a></li>
         </ul>
       </nav>
     </div>
@@ -83,4 +86,5 @@
   </footer>
 
 </body>
+
 </html>
