--- a/blog.html
+++ b/blog.html
@@ -13,14 +13,14 @@
   <header>
     <div class="header-flex container">
       <a href="/" class="logo">
-        <img src="logo.png" alt="Plumbing Wiki Logo">
-        <span>Plumbing Wiki</span>
-      </a>
+  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
+  <span>Renovation Wiki</span>
+</a>
       <nav>
         <ul class="menu">
-          <li><a href="https://donald-peru.github.io/plumbingtest/">Home</a></li>
-          <li><a href="blog.html" class="active">Blogs</a></li>
-          <li><a href="#contact">Feature Your Plumbing Business</a></li>
+          <li><a href="#information">About</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
+          <li><a href="#contact">Feature Your Business</a></li>
         </ul>
       </nav>
     </div>
@@ -86,6 +86,7 @@
 
 </body>
 </html>
+
 
 
 
