--- a/blog.html
+++ b/blog.html
@@ -6,6 +6,7 @@
   <title>Our Blog - Plumbing Wiki</title>
   <meta name="description" content="Explore plumbing insights, maintenance tips, and expert drain cleaning advice from Plumbing Wiki.">
   <link rel="stylesheet" href="blogs.css">
+  <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -86,6 +87,7 @@
 
 </body>
 </html>
+
 
 
 
