--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </a>
       <nav>
         <ul class="menu">
-          <li><a href="#information">About</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/">Home</a></li>
           <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
           <li><a href="#contact">Feature Your Business</a></li>
         </ul>
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
