--- a/blogpost.html
+++ b/blogpost.html
@@ -18,7 +18,7 @@
 </a>
       <nav>
         <ul class="menu">
-          <li><a href="#information">About</a></li>
+          <li><a href="https://donald-peru.github.io/plumbingtest/">Home</a></li>
           <li><a href="https://donald-peru.github.io/plumbingtest/blog.html">Blogs</a></li>
           <li><a href="#contact">Feature Your Business</a></li>
         </ul>
@@ -88,3 +88,4 @@
 </body>
 
 </html>
+
