Fix HTML encoding issues in blogpost.html

--- a/blogpost.html
+++ b/blogpost.html
@@ -64,8 +64,8 @@
       </div>
 
       <div class="widget">
-        <h3>Sponsored</h3>
-        <img src="images/ad-banner.jpg" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
+        <h3></h3>
+        <img src="Black and Blue Gradient Website Service Flyer.png" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
       </div>
 
       <div class="widget">
@@ -88,4 +88,5 @@
 </body>
 
 </html>
+
 
