--- a/blogpost.html
+++ b/blogpost.html
@@ -65,7 +65,7 @@
 
       <div class="widget">
         <h3></h3>
-        <img src="Black and Blue Gradient Website Service Flyer.png" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
+        <img src="homeimprovement-guest-posting.png" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
       </div>
 
       <div class="widget">
@@ -88,5 +88,6 @@
 </body>
 
 </html>
+
 
 
