Update author details in blogpost.html
Updated author information and image in the sidebar.

--- a/blogpost.html
+++ b/blogpost.html
@@ -59,8 +59,14 @@
     <aside class="sidebar">
       <div class="widget">
         <h3>About the Author</h3>
-        <img src="images/author.jpg" alt="Author" class="sidebar-img">
-        <p>Hi, I’m Alex Green — a certified plumber with over 15 years of hands-on experience in leak repair and home plumbing maintenance.</p>
+        <img src="Home-Improvement-SEO-Expert-in-los-angeles-ca-usa.jpeg" alt="Home Improvement SEO Expert Near You in LA, CA, USA" class="sidebar-img">
+        <p>
+  Caitlin H. is a home improvement blogger, publisher, and SEO pro based in Los
+  Angeles, with 10+ years in digital marketing and web development. She loves
+  helping homeowners upgrade their spaces while sharing tips that actually work
+  online. When she’s not writing or optimizing websites, you’ll find her
+  exploring LA’s design hotspots and bringing fresh ideas to every project.
+</p>
       </div>
 
       <div class="widget">
@@ -88,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
