--- a/blogpost.html
+++ b/blogpost.html
@@ -61,11 +61,11 @@
         <h3>About the Author</h3>
         <img src="Home-Improvement-SEO-Expert-in-los-angeles-ca-usa.jpeg" alt="Home Improvement SEO Expert Near You in LA, CA, USA" class="sidebar-img">
         <p>
-  Caitlin H. is a home improvement blogger, publisher, and SEO pro based in Los
-  Angeles, with 10+ years in digital marketing and web development. She loves
-  helping homeowners upgrade their spaces while sharing tips that actually work
-  online. When she’s not writing or optimizing websites, you’ll find her
-  exploring LA’s design hotspots and bringing fresh ideas to every project.
+  Caitlin H. is a home improvement content writer based in Los Angeles. With
+  over 10 years of experience, she creates engaging, practical articles that
+  help homeowners improve their spaces. Passionate about design and
+  storytelling, Caitlin turns ideas into tips and guides that are both inspiring
+  and easy to follow.
 </p>
       </div>
 
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
