--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -140,18 +140,11 @@
   flapper, it allows wastewater to flow out while preventing reverse flow from
   municipal sewers.&nbsp;
 </p>
-<div class="separator" style="clear: both;">
-  <a
-    href="#"
-    style="display: block; padding: 1em 0; text-align: center; "
-    ><img
-      alt=""
-      border="0"
-      data-original-height="1500"
-      data-original-width="1500"
-      src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEiIBxWzNqZvQ9lBK7Bom9OG4sYOZ8FfEBDF1gz480MuSHHyw7UdbBFJ-jjPPYKAwuECJHzDIBv1vu33q47F79U953Tev8bH78jsNmmPzyB8YpueWVBK-4-ZvQtGXSgkEDt81VGsuYCIJJFse_rJz6Ta4WJJ3BHnQprZNvExwxc9YT7DJoRSYEfZ88vo-Kk/s1600/backwater_valve_7012_7022.jpg"
-  /></a>
-</div>
+<img
+  src="backwater_valve_7012_new.jpg"
+  alt=""
+  style="max-width:100%; height:auto;"
+/>
 <p>
   Its bolted cover provides easy access for inspection and maintenance, and it
   comes in multiple sizes and connection types to fit a variety of sewer
@@ -203,6 +196,7 @@
 </body>
 
 </html>
+
 
 
 
