--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -31,9 +31,10 @@
 
     <!-- Blog Content -->
     <article class="blog-content">
-      <h2 style="text-align: left;">
+      <h1 style="text-align: left;">
   Everything You Need to Know About Backwater Valves
-</h2>
+</h1>
+      <img src="backwater_valve_7012_7022.jpg" alt="Leaking Pipe" class="featured-img">
 <p>
   When it comes to protecting your home from sewage backups and costly water
   damage, one of the most important but often overlooked plumbing devices is the
@@ -196,6 +197,7 @@
 </body>
 
 </html>
+
 
 
 
