--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -133,19 +133,15 @@
 </h3>
 <p>
   The Smith® Series
-  <a href="https://www.jrsmith.com/sewer-backwater-valves-7012"
-    ><b>7012 Sewer Backwater Valve</b></a
-  >
+  <a href="https://www.jrsmith.com/sewer-backwater-valves-7012" 
+   style="color: #ff6900;">
+  <b>7012 Sewer Backwater Valve</b>
+</a>
   is a heavy-duty, cast-iron valve designed to protect homes and buildings from
   sewer backflow. Featuring a durable Duco-coated cast-iron body and a bronze
   flapper, it allows wastewater to flow out while preventing reverse flow from
   municipal sewers.&nbsp;
 </p>
-<img
-  src="backwater_valve_7012_new.jpg"
-  alt=""
-  style="max-width:100%; height:auto;"
-/>
 <p>
   Its bolted cover provides easy access for inspection and maintenance, and it
   comes in multiple sizes and connection types to fit a variety of sewer
@@ -197,6 +193,7 @@
 </body>
 
 </html>
+
 
 
 
