--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -170,7 +170,7 @@
 
       <div class="widget">
         <h3></h3>
-        <img src="homeimprovement-guest-posting.png" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
+        <img src="#" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
       </div>
 
       <div class="widget">
@@ -193,6 +193,7 @@
 </body>
 
 </html>
+
 
 
 
