--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -169,7 +169,7 @@
 
       <div class="widget">
         <h3></h3>
-        <img src="#" alt="Plumbing Ad" class="sidebar-img sidebar-img--small">
+        <img src="homeimprovement-guest-posting.png" alt="Home Improvement + Guest Post, Home ImprovemenT Guest Posting Service Near You in USA" class="sidebar-img sidebar-img--small">
       </div>
 
       <div class="widget">
@@ -192,6 +192,7 @@
 </body>
 
 </html>
+
 
 
 
