--- a/blog.html
+++ b/blog.html
@@ -35,11 +35,11 @@
 
       <!-- Example Blog 1 -->
       <article class="blog-box">
-        <img src="images/drain-cleaning.jpg" alt="Drain Cleaning Tips">
+        <img src="backwater_valve_7012_7022.jpg" alt="The Smith® Series 7012 Sewer Backwater Valve">
         <div class="blog-content">
-          <h3>Top 5 Drain Cleaning Tricks That Actually Work</h3>
-          <p>Learn proven drain cleaning methods that plumbers actually use and recommend for homeowners.</p>
-          <a href="blog1.html" class="btn-read">Read More</a>
+          <h3>Everything You Need to Know About Backwater Valves</h3>
+          <p>A backwater valve is a plumbing device installed in your home's sewer line to prevent sewage from flowing back into your property.</p>
+          <a href="https://donald-peru.github.io/plumbingtest/smith-series-7012-sewer-backwater-valve.html" class="btn-read">Explore</a>
         </div>
       </article>
 
@@ -87,6 +87,7 @@
 
 </body>
 </html>
+
 
 
 
