--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <!-- Header -->
   <header>
     <div class="header-flex container">
-      <a href="/" class="logo">
+      <a href="https://donald-peru.github.io/plumbingtest/" class="logo">
   <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
   <span>Renovation Wiki</span>
 </a>
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
