--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
 
   <!-- Blog Section -->
   <section class="blog-container">
-    <h2>Explore Expert Plumbing Articles</h2>
+    <h2>Home Improvement and Renovation Blogs</h2>
 
     <div class="blog-grid">
 
@@ -87,6 +87,7 @@
 
 </body>
 </html>
+
 
 
 
