--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -186,12 +186,23 @@
 
   <!-- Footer -->
   <footer>
+    <ul>
+  <li><a href="/home-improvement-glossary">Home Improvement Glossary</a></li>
+  <li><a href="/plumbing-glossary">Plumbing Glossary</a></li>
+  <li><a href="/electrical-service-glossary">Electrical Service Glossary</a></li>
+  <li><a href="/carpentry-glossary">Carpentry Glossary</a></li>
+  <li><a href="/hvac-glossary">HVAC Glossary</a></li>
+  <li><a href="/landscaping-glossary">Landscaping Glossary</a></li>
+  <li><a href="/roofing-glossary">Roofing Glossary</a></li>
+</ul>
+    
     <p>&copy; 2025 Plumbing Wiki. All Rights Reserved.</p>
   </footer>
 
 </body>
 
 </html>
+
 
 
 
