--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -185,8 +185,8 @@
   </main>
 
   <!-- Footer -->
-  <footer>
-    <ul>
+<footer class="footer">
+  <ul class="footer-list">
   <li><a href="/home-improvement-glossary">Home Improvement Glossary</a></li>
   <li><a href="/plumbing-glossary">Plumbing Glossary</a></li>
   <li><a href="/electrical-service-glossary">Electrical Service Glossary</a></li>
@@ -194,14 +194,14 @@
   <li><a href="/hvac-glossary">HVAC Glossary</a></li>
   <li><a href="/landscaping-glossary">Landscaping Glossary</a></li>
   <li><a href="/roofing-glossary">Roofing Glossary</a></li>
-</ul>
-    
-    <p>&copy; 2025 Plumbing Wiki. All Rights Reserved.</p>
-  </footer>
+  </ul>
+  <p class="footer-text">© 2025 Your Website Name</p>
+</footer>
 
 </body>
 
 </html>
+
 
 
 
