--- a/blogpost.html
+++ b/blogpost.html
@@ -13,7 +13,7 @@
   <header>
     <div class="header-flex container">
       <a href="/" class="logo">
-  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
+  <img src="renovationwikilogo.png" alt="Renovation Wiki Logo">
   <span>Renovation Wiki</span>
 </a>
       <nav>
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
