--- a/blogpost.html
+++ b/blogpost.html
@@ -14,7 +14,7 @@
     <div class="header-flex container">
       <a href="/" class="logo">
   <img src="renovationwikilogo.png" alt="Renovation Wiki Logo">
-  <span>Renovation Wiki</span>
+  <span></span>
 </a>
       <nav>
         <ul class="menu">
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
