--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
   <!-- Header -->
   <header>
     <div class="header-flex container">
-      <a href="/" class="logo">
+      <a href="https://donald-peru.github.io/plumbingtest/" class="logo">
   <img src="renovation-wiki-logo-3-removebg-preview.png" alt="Renovation Wiki Logo">
   <span></span>
 </a>
@@ -94,6 +94,7 @@
 </body>
 
 </html>
+
 
 
 
