--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
 
   <!-- Header -->
-  <header>
-    div class="header-flex container">
-      <a href="https://donald-peru.github.io/plumbingtest/" class="logo">
-  <img src="renovation-wiki-logo-3-removebg-preview.png" alt="Renovation Wiki Logo">
-  <span></span>
+   <header>
+    <div class="header-flex container">
+      <a href="/" class="logo">
+  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
+  <span>Renovation Wiki</span>
 </a>
       <nav>
         <ul class="menu">
@@ -63,6 +63,7 @@
 
 </body>
 </html>
+
 
 
 
