--- a/blog.html
+++ b/blog.html
@@ -13,9 +13,9 @@
   <!-- Header (same as homepage) -->
   <header>
     <div class="header-flex container">
-      <a href="/" class="logo">
-  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
-  <span>Renovation Wiki</span>
+      <a href="https://donald-peru.github.io/plumbingtest/" class="logo">
+  <img src="renovation-wiki-logo-3-removebg-preview.png" alt="Renovation Wiki Logo">
+  <span></span>
 </a>
       <nav>
         <ul class="menu">
