--- a/smith-series-7012-sewer-backwater-valve.html
+++ b/smith-series-7012-sewer-backwater-valve.html
@@ -12,9 +12,9 @@
   <!-- Header -->
   <header>
     <div class="header-flex container">
-      <a href="/" class="logo">
-  <img src="renovation-wiki-logo.png" alt="Renovation Wiki Logo">
-  <span>Renovation Wiki</span>
+      <a href="https://donald-peru.github.io/plumbingtest/" class="logo">
+  <img src="renovation-wiki-logo-3-removebg-preview.png" alt="Renovation Wiki Logo">
+  <span></span>
 </a>
       <nav>
         <ul class="menu">
@@ -201,6 +201,7 @@
 </body>
 
 </html>
+
 
 
 
